# zune-deploy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ZuneDeploy.slnx  zune-deploy.csproj
.github/workflows/: app-image.yaml  tests.yaml
lib/: CMakeLists.txt
lib/src/: api.cpp  api.hpp
scripts/: build-app-image.sh  install-dependencies.sh
src/: Native.cs  Program.cs  main.cpp
src/NativeLib/: CMakeLists.txt
src/NativeLib/src/: api.cpp  api.hpp  enum.hpp  main.cpp
src/SourceGenerators/: EnumGenerator.cs  SourceGenerators.csproj
src/ZuneDeploy/: Program.cs  Zune.cs  ZuneDeploy.csproj
src/ZuneDeploy.CLI/: Program.cs  Spinner.cs  ZuneDeploy.CLI.csproj
src/ZuneDeploy.CLI/Commands/: DeployApplicationCommand.cs  DeployCommand.cs  DeployRuntimeCommand.cs  FileDeployUtil.cs  ManageRuntimesCommand.cs
src/ZuneDeploy.Tests/: ZuneDeploy.Tests.csproj
src/ZuneDeploy.Tests/Messaging/: PacketTests.cs
src/ZuneDeploy.Tests/Transport/: CommandTest.cs  CommandTests.cs  HelloMessageTest.cs  PacketParserTests.cs  PacketReaderTests.cs  PacketTests.cs  PacketWriterTests.cs  ServiceStreamTests.cs  TestUtil.cs
src/ZuneDeploy/Core/: Program.cs
src/ZuneDeploy/Main/: Program.cs
src/ZuneDeploy/Messaging/: Command.cs  Device.cs  HelloMessage.cs  MTP.cs  Message.cs  Packet.cs
src/ZuneDeploy/Native/: EnumGenerator.cs  MTP.cs
src/ZuneDeploy/Transport/: Client.cs  Command.cs  Device.cs  HelloMessage.cs  MTP.cs  Message.cs  Packet.cs  PacketParser.cs  PacketReader.cs  PacketWriter.cs  Service.cs  ServiceStream.cs  StreamCollection.cs  WorkItem.cs
(+28 files in other folders)
